--- a/portfolio/src/components/menu/menu.scss
+++ b/portfolio/src/components/menu/menu.scss
@@ -11,6 +11,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transition: all 1s ease;
 
   &.active {
     right: 0;
