--- a/portfolio/src/components/intro/intro.scss
+++ b/portfolio/src/components/intro/intro.scss
@@ -1,22 +1,49 @@
+@import "../../global.scss";
 .intro {
   background-color: white;
   display: flex;
+  @keyframes change {
+    0% {
+      background-position: 0 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0 50%;
+    }
+  }
   .left {
     flex: 0.5;
     overflow: hidden;
 
     .imgContainer {
+      color: white;
       width: 700px;
       height: 700px;
-      background-color: crimson;
+      background-size: 400% 400%;
+      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
       justify-content: center;
       float: right;
+      position: relative;
+      animation: change 10s ease-in-out infinite;
 
       img {
         height: 90%;
+      }
+    }
+    @keyframes change {
+      0% {
+        background-position: 0 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0 50%;
       }
     }
   }
@@ -42,7 +69,7 @@
         font-size: 30px;
         span {
           font-size: inherit;
-          color: crimson;
+          color: $mainColor;
         }
         .ityped-cursor {
           animation: blink 1s infinite;
@@ -72,5 +99,16 @@
         }
       }
     }
+  }
+}
+@keyframes change {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
   }
 }
