changes to a css

--- a/portfolio/src/components/works/works.scss
+++ b/portfolio/src/components/works/works.scss
@@ -49,16 +49,17 @@
               img {
                 width: 25px;
               }
-              h2 {
-                font-size: 20px;
-              }
-              p {
-                font-size: 13px;
-              }
-              span {
-                font-size: 12px;
-                font-weight: 600;
-              }
+            }
+            h2 {
+              font-size: 20px;
+            }
+            p {
+              font-size: 13px;
+            }
+            span {
+              font-size: 12px;
+              font-weight: 600;
+              text-decoration: underline;
             }
           }
         }
