--- a/portfolio/src/components/works/works.scss
+++ b/portfolio/src/components/works/works.scss
@@ -66,6 +66,9 @@
         .right {
           flex: 8;
           height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
         }
       }
     }
