--- a/portfolio/src/components/works/works.scss
+++ b/portfolio/src/components/works/works.scss
@@ -3,12 +3,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  position: relative;
+  .arrow {
+    height: 50px;
+    position: absolute;
+    cursor: pointer;
+    &.left {
+      left: 100px;
+      transform: rotateY(180deg);
+    }
+    &.right {
+      right: 100px;
+    }
+  }
   .slider {
     height: 350px;
     display: flex;
     position: absolute;
     left: 0;
+    transition: all 1s ease-in-out;
     .container {
       width: 100vw;
       display: flex;
@@ -69,6 +82,11 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          overflow: hidden;
+          img {
+            width: 400px;
+            transform: rotate(-10deg);
+          }
         }
       }
     }
