--- a/portfolio/src/components/Portfolio/Portfolio.scss
+++ b/portfolio/src/components/Portfolio/Portfolio.scss
@@ -8,6 +8,9 @@
 
   h1 {
     font-size: 50px;
+    @include mobile {
+      font-size: 20px;
+    }
   }
 
   ul {
@@ -15,6 +18,12 @@
     padding: 0;
     list-style: none;
     display: flex;
+    @include mobile {
+      margin: 10px 0;
+      font-size: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
   .container {
@@ -23,7 +32,9 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-
+    @include mobile {
+      width: 100%;
+    }
     .item {
       width: 220px;
       height: 150px;
@@ -38,6 +49,10 @@
       transition: all 0.5s ease;
       cursor: pointer;
 
+      @include mobile {
+        width: 130px;
+        height: 100px;
+      }
       h3 {
         position: absolute;
         font-size: 20px;
