--- a/portfolio/src/components/contact/contact.scss
+++ b/portfolio/src/components/contact/contact.scss
@@ -3,6 +3,10 @@
 .contact {
   background-color: white;
   display: flex;
+
+  @include mobile {
+    flex-direction: column;
+  }
   .left {
     flex: 1;
     overflow: hidden;
@@ -18,6 +22,9 @@
     align-items: center;
     justify-content: center;
 
+    @include mobile {
+      flex-direction: column;
+    }
     h2 {
       font-size: 30px;
     }
@@ -34,12 +41,20 @@
         width: 300px;
         height: 30px;
         font-size: 14px;
+        @include mobile {
+          width: 200px;
+          height: 20px;
+        }
       }
 
       textarea {
         width: 300px;
         height: 200px;
         font-size: 14px;
+        @include mobile {
+          width: 200px;
+          height: 100x;
+        }
       }
 
       button {
