--- a/portfolio/src/components/intro/intro.scss
+++ b/portfolio/src/components/intro/intro.scss
@@ -2,6 +2,11 @@
 .intro {
   background-color: white;
   display: flex;
+
+  @include mobile {
+    flex-direction: column;
+    align-items: center;
+  }
   .left {
     flex: 0.5;
     overflow: hidden;
@@ -19,6 +24,10 @@
       float: right;
       position: relative;
       animation: change 10s ease-in-out infinite;
+
+      @include mobile {
+        align-items: flex-start;
+      }
       @keyframes change {
         0% {
           background-position: 0 50%;
@@ -32,6 +41,9 @@
       }
       img {
         height: 90%;
+        @include mobile {
+          height: 50%;
+        }
       }
       @keyframes change {
         0% {
@@ -67,16 +79,25 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-
+      @include mobile {
+        padding-left: 0;
+        align-items: center;
+      }
       h1 {
         font-size: 60px;
         margin: 10px 0;
+        @include mobile {
+          font-size: 40px;
+        }
       }
       h2 {
         font-size: 35px;
       }
       h3 {
         font-size: 30px;
+        @include mobile {
+          font-size: 20px;
+        }
         span {
           font-size: inherit;
           color: $mainColor;
