--- a/portfolio/src/components/testimonials/testimonials.scss
+++ b/portfolio/src/components/testimonials/testimonials.scss
@@ -1,11 +1,17 @@
+@import "../../global.scss";
 .testimonials {
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  @include mobile {
+    justify-content: space-around;
+  }
   h1 {
     font-size: 50px;
+    @include mobile {
+      font-style: 20px;
+    }
   }
   .container {
     width: 100%;
@@ -13,7 +19,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    @include mobile {
+      flex-direction: column;
+      height: 100%;
+    }
     .card {
       width: 250px;
       height: 70%;
@@ -24,10 +33,19 @@
       justify-content: space-around;
       padding: 20px;
       transition: all 1s ease;
+      @include mobile {
+        height: 180px;
+        margin: 10px 0;
+      }
       &.featured {
         width: 300px;
         height: 75%;
         margin: 0 30px;
+        @include mobile {
+          width: 250px;
+          height: 180px;
+          margin: 1px;
+        }
       }
       &:hover {
         transform: scale(1.1);
@@ -47,6 +65,10 @@
             border-radius: 50%;
             object-fit: cover;
             margin: 0 30px;
+            @include mobile {
+              width: 30px;
+              height: 30px;
+            }
           }
         }
       }
@@ -55,6 +77,10 @@
         padding: 10px;
         border-radius: 10px;
         background-color: rgb(250, 244, 245);
+        @include mobile {
+          font-size: 12px;
+          padding: 5px;
+        }
       }
       .bottom {
         display: flex;
@@ -63,9 +89,16 @@
         justify-content: center;
         h3 {
           margin-bottom: 5px;
+
+          @include mobile {
+            font-size: 14px;
+          }
         }
         h4 {
           color: gray;
+          @include mobile {
+            font-size: 13px;
+          }
         }
       }
     }
