--- a/portfolio/src/components/works/works.scss
+++ b/portfolio/src/components/works/works.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .works {
   background-color: crimson;
   display: flex;
@@ -8,6 +10,10 @@
     height: 50px;
     position: absolute;
     cursor: pointer;
+
+    @include mobile {
+      display: none;
+    }
     &.left {
       left: 100px;
       transform: rotateY(180deg);
@@ -22,6 +28,12 @@
     position: absolute;
     left: 0;
     transition: all 1s ease-in-out;
+
+    @include mobile {
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+    }
     .container {
       width: 100vw;
       display: flex;
@@ -37,6 +49,11 @@
         align-items: center;
         justify-content: center;
 
+        @include mobile {
+          width: 80%;
+          height: 150px;
+          margin: 15px 0;
+        }
         .left {
           flex: 4;
           height: 80%;
@@ -50,7 +67,10 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-
+            @include mobile {
+              width: 100%;
+              height: 100%;
+            }
             .imgContainer {
               width: 40px;
               height: 40px;
@@ -59,15 +79,28 @@
               display: flex;
               align-items: center;
               justify-content: center;
+              @include mobile {
+                width: 20px;
+                height: 20px;
+              }
               img {
                 width: 25px;
+                @include mobile {
+                  width: 15px;
+                }
               }
             }
             h2 {
               font-size: 20px;
+              @include mobile {
+                font-size: 13px;
+              }
             }
             p {
               font-size: 13px;
+              @include mobile {
+                display: none;
+              }
             }
             span {
               font-size: 12px;
