--- a/portfolio/src/components/intro/intro.scss
+++ b/portfolio/src/components/intro/intro.scss
@@ -9,63 +9,41 @@
   }
   .left {
     flex: 0.5;
-    overflow: hidden;
 
     .imgContainer {
       color: white;
       width: 700px;
       height: 700px;
-      background-size: 400% 400%;
       background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
       justify-content: center;
       float: right;
+      background-size: 400% 400%;
       position: relative;
-      animation: change 10s ease-in-out infinite;
+      animation: change 5s ease-in-out infinite;
 
+      @keyframes change {
+        0% {
+          background-position: 0 %50%;
+        }
+        50% {
+          background-position: 100% %50%;
+        }
+        10% {
+          background-position: 0 %50%;
+        }
+      }
       @include mobile {
         align-items: flex-start;
       }
-      @keyframes change {
-        0% {
-          background-position: 0 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0 50%;
-        }
-      }
+
       img {
         height: 90%;
         @include mobile {
-          height: 50%;
+          height: 60%;
         }
-      }
-      @keyframes change {
-        0% {
-          background-position: 0 50%;
-        }
-        50% {
-          background-position: 100% 50%;
-        }
-        100% {
-          background-position: 0 50%;
-        }
-      }
-    }
-    @keyframes change {
-      0% {
-        background-position: 0 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0 50%;
       }
     }
   }
