--- a/portfolio/src/components/contact/contact.scss
+++ b/portfolio/src/components/contact/contact.scss
@@ -41,6 +41,7 @@
         width: 300px;
         height: 30px;
         font-size: 14px;
+        border-radius: 5px;
         @include mobile {
           width: 200px;
           height: 20px;
@@ -61,9 +62,8 @@
         width: 150px;
         height: 30px;
         color: white;
-        background-color: crimson;
-        border: none;
-        border-radius: 10px;
+        background-color: $mainColor;
+        border-radius: 5px;
         font-weight: 500;
         cursor: pointer;
 
