--- a/portfolio/src/components/contact/contact.scss
+++ b/portfolio/src/components/contact/contact.scss
@@ -64,6 +64,7 @@
         color: white;
         background-color: $mainColor;
         border-radius: 5px;
+        border: none;
         font-weight: 500;
         cursor: pointer;
 
