--- a/portfolio/src/components/aboutme/aboutme.scss
+++ b/portfolio/src/components/aboutme/aboutme.scss
@@ -1,5 +1,192 @@
 @import "../../global.scss";
 
+* {
+  margin: 0;
+  padding: 0;
+}
+.h3a {
+  margin-top: 17px;
+  display: flex;
+  justify-content: center;
+  color: white;
+  align-items: center;
+  font-size: 20px;
+  @include mobile {
+    font-size: 13px;
+  }
+}
+.h2a {
+  margin-top: 17%;
+  display: flex;
+  justify-content: center;
+  color: white;
+  align-items: center;
+  @include mobile {
+    flex-direction: column;
+    margin-top: 70%;
+    font-size: 13px;
+  }
+}
+.h2ab {
+  margin-top: 15%;
+  display: flex;
+  justify-content: center;
+  color: white;
+  align-items: center;
+  @include mobile {
+    flex-direction: column;
+    margin-top: 70%;
+    font-size: 13px;
+  }
+}
+section {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: $mainColor;
+  overflow: hidden;
+}
+section .wavetop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("https://i.imgur.com/TIiEqhX.png");
+  background-position: 10px;
+  transform: scaleY(-1);
+  background-size: 1000px 100px;
+}
+section .wavetop.wavetop1 {
+  animation: animate 30s linear infinite;
+  z-index: 1000;
+  opacity: 1;
+  animation-delay: 0s;
+  bottom: 0;
+}
+section .wavetop.wavetop2 {
+  animation: animate2 15s linear infinite;
+  z-index: 999;
+  opacity: 0.5;
+  animation-delay: -5s;
+  bottom: 10px;
+}
+@keyframes animate2 {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: -1000px;
+  }
+}
+
+section .wave {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("https://i.imgur.com/TIiEqhX.png");
+  background-size: 1000px 100px;
+}
+section .wave.wave1 {
+  animation: animate 30s linear infinite;
+  z-index: 1000;
+  opacity: 1;
+  animation-delay: 0s;
+  bottom: 0;
+}
+@keyframes animate {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: 1000px;
+  }
+}
+section .wave.wave2 {
+  animation: animate2 15s linear infinite;
+  z-index: 999;
+  opacity: 0.5;
+  animation-delay: -5s;
+  bottom: 10px;
+}
+@keyframes animate2 {
+  0% {
+    background-position-x: 0;
+  }
+  100% {
+    background-position-x: -1000px;
+  }
+}
+section .wave.wave3 {
+  animation: animate 30s linear infinite;
+  z-index: 998;
+  opacity: 0.2;
+  animation-delay: -2s;
+  bottom: 15px;
+}
+section .wave.wave4 {
+  animation: animate2 15s linear infinite;
+  z-index: 997;
+  opacity: 0.7;
+  animation-delay: -5s;
+  bottom: 20px;
+}
+/* * {
+  margin: 0;
+  padding: 0;
+
+  section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-color: $mainColor;
+    overflow: hidden;
+    .wave {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background: url("https://i.imgur.com/TIiEqhX.png");
+      background-size: 1000px 100px;
+      .wave.wave1 {
+        animation: animate 30s linear infinite;
+        z-index: 1000;
+        opacity: 1;
+        animation-delay: 0;
+        bottom: 0;
+      }
+      @keyframes animate {
+        0% {
+          background-position-x: 0;
+        }
+        100% {
+          background-position-x: 1000px;
+        }
+      }
+      .wave.wave2 {
+        animation: animate2 15s linear infinite;
+        z-index: 999;
+        opacity: 0, 5;
+        animation-delay: -5s;
+        bottom: 10px;
+      }
+      @keyframes animate2 {
+        0% {
+          background-position-x: 0;
+        }
+        100% {
+          background-position-x: -1000px;
+        }
+      }
+    }
+  }
+}
+ */
+/* @import "../../global.scss";
+
 .aboutme {
   background-color: white;
   display: flex;
@@ -26,3 +213,4 @@
     }
   }
 }
+ */
