--- a/portfolio/src/components/aboutme/aboutme.scss
+++ b/portfolio/src/components/aboutme/aboutme.scss
@@ -16,7 +16,7 @@
   }
 }
 .h2a {
-  margin-top: 17%;
+  margin-top: 15%;
   display: flex;
   justify-content: center;
   color: white;
@@ -31,7 +31,7 @@
   }
 }
 .h2ab {
-  margin-top: 10%;
+  margin-top: 12px;
   display: flex;
   font-size: 35px;
   justify-content: center;
