--- a/portfolio/src/components/Portfolio/Portfolio.scss
+++ b/portfolio/src/components/Portfolio/Portfolio.scss
@@ -50,12 +50,15 @@
       cursor: pointer;
 
       @include mobile {
-        width: 200px;
-        height: 200px;
+        width: 100px;
+        height: 100px;
       }
       h3 {
         position: absolute;
         font-size: 20px;
+      }
+      a {
+        list-style: none;
       }
 
       img {
