--- a/portfolio/src/components/works/works.scss
+++ b/portfolio/src/components/works/works.scss
@@ -50,9 +50,10 @@
         justify-content: center;
 
         @include mobile {
-          width: 80%;
-          height: 150px;
+          width: 65%;
+          height: 130px;
           margin: 15px 0;
+          border-radius: 10px;
         }
         .left {
           flex: 4;
