--- a/portfolio/src/components/works/works.scss
+++ b/portfolio/src/components/works/works.scss
@@ -64,7 +64,6 @@
 
           .leftContainer {
             width: 90%;
-            height: 70%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -105,8 +104,9 @@
               }
             }
             a {
-              font-size: 12px;
-              font-weight: 600;
+              margin-top: 10px;
+              font-size: 16px;
+              font-weight: bold;
               text-decoration: none;
               color: $mainColor;
             }
