--- a/portfolio/src/components/Portfolio/Portfolio.scss
+++ b/portfolio/src/components/Portfolio/Portfolio.scss
@@ -7,6 +7,8 @@
   align-items: center;
 
   h1 {
+    color: #00bfa6;
+    margin-bottom: 10px;
     font-size: 50px;
     @include mobile {
       font-size: 20px;
