--- a/portfolio/src/components/testimonials/testimonials.scss
+++ b/portfolio/src/components/testimonials/testimonials.scss
@@ -11,7 +11,7 @@
     color: #00bfa6;
     font-size: 50px;
     @include mobile {
-      font-style: 20px;
+      font-size: 20px;
     }
   }
   .container {
