--- a/portfolio/src/components/works/works.scss
+++ b/portfolio/src/components/works/works.scss
@@ -63,38 +63,47 @@
           justify-content: center;
 
           .leftContainer {
-            width: 90%;
+            margin-left: 10px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             @include mobile {
               width: 100%;
               height: 100%;
+              margin-left: 0px;
             }
             .imgContainer {
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
-              background-color: rgb(245, 179, 155);
+              width: 200px;
+              height: 100px;
               display: flex;
               align-items: center;
               justify-content: center;
               @include mobile {
-                width: 20px;
-                height: 20px;
+                display: none;
               }
               img {
-                width: 25px;
+                height: 30px;
+                width: 50px;
+                margin-left: 5px;
                 @include mobile {
                   width: 15px;
                 }
               }
             }
             h2 {
+              text-decoration: underline;
               font-size: 20px;
+              margin-bottom: 10px;
               color: $mainColor;
               @include mobile {
-                font-size: 13px;
+                font-size: 11px;
+              }
+            }
+            h4 {
+              font-size: 17px;
+              color: $mainColor;
+              @include mobile {
+                display: none;
               }
             }
             p {
@@ -104,7 +113,7 @@
               }
             }
             a {
-              margin-top: 10px;
+              margin-top: 30px;
               font-size: 16px;
               font-weight: bold;
               text-decoration: none;
