--- a/portfolio/src/components/aboutme/aboutme.scss
+++ b/portfolio/src/components/aboutme/aboutme.scss
@@ -40,7 +40,7 @@
   align-items: center;
   @include mobile {
     flex-direction: column;
-    margin-top: 30%;
+    margin-top: 7px;
     font-size: 19px;
     padding: 20px;
   }
@@ -152,6 +152,57 @@ section .wave.wave4 {
   opacity: 0.7;
   animation-delay: -5s;
   bottom: 20px;
+}
+
+section .scrolldown {
+  height: 300px;
+  width: 400px;
+  position: absolute;
+  left: 40%;
+  margin-bottom: 100%;
+  z-index: 3;
+  cursor: pointer;
+  @include mobile {
+    height: 70px;
+    width: 10px;
+  }
+}
+.scrolldown::before,
+.scrolldown::after {
+  content: "";
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  border: 2px solid white;
+  height: 5px;
+  width: 5px;
+  transform: translate(-50%, -50%) rotate(45deg);
+  border-top: transparent;
+  border-left: transparent;
+  animation: scrolldown 1s ease-in-out infinite;
+  @include mobile {
+    height: 3px;
+    width: 3px;
+  }
+}
+.scrolldown::after {
+  top: 30%;
+  animation-delay: 0.3s;
+}
+@keyframes scrolldown {
+  0% {
+    opacity: 0;
+  }
+  30% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    top: 90%;
+  }
 }
 /* * {
   margin: 0;
