--- a/portfolio/src/components/intro/intro.scss
+++ b/portfolio/src/components/intro/intro.scss
@@ -100,18 +100,54 @@
         }
       }
     }
-    a {
+    .scrolldown {
+      height: 300px;
+      width: 300px;
       position: absolute;
-      bottom: 10px;
-      left: 40%;
-      img {
-        width: 30px;
-        animation: arrowBlink 2s infinite;
+      left: 10%;
+      bottom: 20px;
+      cursor: pointer;
+      @include mobile {
+        height: 35px;
+        width: 35px;
+        left: 49%;
       }
-      @keyframes arrowBlink {
-        100% {
-          opacity: 0;
-        }
+    }
+    .scrolldown::before,
+    .scrolldown::after {
+      content: "";
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      border: 2px solid black;
+      height: 5px;
+      width: 5px;
+      transform: translate(-50%, -50%) rotate(45deg);
+      border-top: transparent;
+      border-left: transparent;
+      animation: scrolldown 1s ease-in-out infinite;
+      @include mobile {
+        height: 3px;
+        width: 3px;
+      }
+    }
+    .scrolldown::after {
+      top: 30%;
+      animation-delay: 0.3s;
+    }
+    @keyframes scrolldown {
+      0% {
+        opacity: 0;
+      }
+      30% {
+        opacity: 1;
+      }
+      60% {
+        opacity: 1;
+      }
+      100% {
+        opacity: 0;
+        top: 90%;
       }
     }
   }
