--- a/portfolio/src/components/contact/contact.scss
+++ b/portfolio/src/components/contact/contact.scss
@@ -44,10 +44,11 @@
         width: 300px;
         height: 30px;
         font-size: 14px;
-        border-radius: 5px;
+        border: none;
         @include mobile {
           width: 200px;
-          height: 20px;
+          margin-bottom: 20px;
+          height: 40px;
         }
       }
 
@@ -55,6 +56,7 @@
         width: 300px;
         height: 200px;
         font-size: 14px;
+        border: none;
         @include mobile {
           width: 200px;
           height: 100x;
@@ -70,7 +72,10 @@
         border: none;
         font-weight: 500;
         cursor: pointer;
-
+        @include mobile {
+          width: 200px;
+          height: 100px;
+        }
         &:focus {
           outline: none;
         }
