lots of changes

--- a/portfolio/src/components/contact/contact.scss
+++ b/portfolio/src/components/contact/contact.scss
@@ -83,6 +83,20 @@
 
       span {
         color: green;
+        font-size: 20px;
+        @include mobile {
+          margin-top: 10px;
+          height: 40px;
+          font-size: 13px;
+        }
+      }
+      p {
+        color: red;
+
+        @include mobile {
+          height: 40px;
+          font-size: 13px;
+        }
       }
     }
   }
