--- a/portfolio/src/components/topbar/topbar.scss
+++ b/portfolio/src/components/topbar/topbar.scss
@@ -66,6 +66,7 @@
   &.active {
     background-color: $mainColor;
     color: white;
+    z-index: 3;
     .hamburger {
       span {
         &:first-child {
