--- a/portfolio/src/components/contact/contact.scss
+++ b/portfolio/src/components/contact/contact.scss
@@ -45,6 +45,9 @@
         height: 30px;
         font-size: 14px;
         border: none;
+        background-color: #ecf0f1;
+        padding: 10px 10px;
+        border-radius: 10px;
         @include mobile {
           width: 200px;
           margin-bottom: 20px;
@@ -57,6 +60,9 @@
         height: 200px;
         font-size: 14px;
         border: none;
+        background-color: #ecf0f1;
+        padding: 10px 10px;
+        border-radius: 10px;
         @include mobile {
           width: 200px;
           height: 100x;
